2014-01-19  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (baboon-weeing): now "mazak-birds" follows "baboon-weeing".

	* polyphony.scm (mazak-birds): new animation clip "mazak-birds" was added.

2014-01-07  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (all): frame-set -> cel-set. frame -> cel.

2014-01-04  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (all): swallowtail of reverse direction.
	
	* polyphony.scm (all): rapae of reverse direction.
	
	* polyphony.scm (animation->animation-with-fade-out): it just adds fade-out effect but does not add freeze effect.

2013-12-31  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (animation->animation-with-fade-out): still debuging.
	
	* polyphony.scm (animation->animation): copy constructor of <animation> class.

	* polyphony.scm (make-papilionidae-animation): fixed animation.
	
	* polyphony.scm (*the-animation-collection*): changed Y-offset of Squirrel to 0.

	* polypony.scm (image-prefix): changed from http://localhost/... to flie:///...

	* polyphony.scm (*the-animation-collection*): changed Y-offset of Tanuki from 200 to 0.

	* polyphony.scm (all): reformatted the code.

2013-12-30  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (all): cloned from https://kanaya@bitbucket.org/kanaya/polyphony3

2011-09-27  Ichi Kanaya  <kanaya@pineappledesign.org>

	* polpyhony.scm (<animation>): jump-offset slot added.

	* polpyhony.scm (*the-animation-collection*): baboon-wee offset adjusted.

	* polyphony.scm (*the-animation-collection*): baboon-weeing added. forks to baboon-wee in 0 second. forked from baboon.

	* polyphony.scm (*the-animation-collection*): baboon modified.

2011-09-26  Ichi Kanaya  <kanaya@pineappledesign.org>

	* polyphony.scm (render-content): alpha tag.

	* polyphony.scm (<animation>): alpha slot.

	* polyphony.scm (all): relocated from polyphony-server.scm.

	* polyphony-server.scm (render-content): ambient sound tag added.
